--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "passportlogin",
   "version": "1.0.0",
   "description": "",
-  "main": "passport.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
@@ -20,8 +20,8 @@
     "stripe": "^7.5.0"
   },
   "engines": {
-    "node": "9",
-    "npm": "5"
+    "node": "10",
+    "npm": "5.1.0"
   },
   "devDependencies": {
     "dotenv": "^8.0.0"
